# qOS

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Makefile  NOTICE  README.md  install.sh  kernel.ld  limine.cfg  log  start.sh
.cargo/: config.toml  kernel.ld
fonts/: Uni2-VGA16.psf
src/: allocator.rs  bitflags.rs  boot.rs  bootInfo.hpp  boot_info.h  fb.rs  interrupts.rs  lib.rs  limine.rs  main.c  main.cpp  main.rs  paging.rs  start.c  start.cpp  start.rs  sync.rs  utils.rs
src/acpi/: acpi.c  acpi.cpp  acpi.h  acpi.hpp  lai.c
src/console/: console.cpp  console.hpp  font.hpp  renderer.cpp  renderer.hpp
src/drivers/: apic.c  apic.h  hpet.c  hpet.h  intel_82574.c  intel_82574.h  intel_uhd_graphics.c  pci.c  pci.h  pci_device_db.h  sb16.c  sb16.h  trampoline.asm  tsc.c  usb.h
src/drivers/ps2/: keyboard.cpp  keyboard.hpp
src/drivers/ps2/layouts/: qwerty_europe.hpp
src/drivers/usb/: common.c  common.h  uhci.c  xhci.c
src/gdt/: gdt.asm  gdt.cpp  gdt.hpp
src/interrupts/: apic.cpp  apic.hpp  gdt.asm  gdt.c  gdt.h  handlers.c  handlers.h  idt.c  idt.cpp  idt.h  idt.hpp  interrupts.cpp  interrupts.hpp  pic.cpp  pic.hpp
src/paging/: bitmap.cpp  bitmap.hpp  lmalloc.c  malloc.c  malloc.h  memory.c  memory.cpp  memory.h  memory.hpp  pageFrameAllocator.cpp  pageFrameAllocator.hpp  pageTableManager.cpp  pageTableManager.hpp  paging.c  pool.h
src/pci/: lookup.hpp  pci.cpp  pci.hpp
src/scheduling/: pit.cpp  pit.hpp  timer.cpp  timer.hpp  trampoline.asm
src/smp/: smp.c  smp.h  spinlock.c  spinlock.h
src/std/: memory.c  memory.h  stdio.c  stdio.h  string.h
src/timers/: timers.c  timers.h
src/utils/: cpuid.h  io.h  io.hpp  mem.c  mem.h  memory.cpp  memory.hpp  string.cpp  string.hpp  unwind.c  unwind.h
src/x86/: reg.rs
